Ajout du bouton afin d'étendre une fiche d'un jeu sur la page d'accueil

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
     <div class="space"></div> -->
 
-      <div class="inside">
+      <div class="testeuh">
         <div class="card-containerv2">
 
           <div id="hog" class="cardv2">
@@ -149,7 +149,13 @@
                     </span>
                   </span>
                 </span>
-                <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
+                <span class="cardBtnSection">
+                  <span class="cardBtnHolder">
+                    <span class="cardBtn">
+                      <span class="cardBtnIcon"></span>
+                    </span>
+                  </span>
+                </span>
               </span>
               <span>
                 <p>Test</p>
@@ -207,7 +213,9 @@
             <p>Mentions légales</p>
           </div>
           <div class="footer-collumn">
-            <p>Nous contacter</p>
+            <a href="pages/contact-us.html">
+              <p>Nous contacter</p>
+            </a>
           </div>
           <div class="footer-collumn">
             <div class="socials">
