--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -38,55 +38,54 @@
     </div>
   </header>
   <div class="page">
-    <div class="background-image">
-      <div class="space"></div>
-      <div class="inside ">
-        <div class="contact-form">
-          <div class="form-holder">
+    <img class="background-img" src="../img/hogwards-legacy.jpg" alt="" srcset="">
+    <div class="space"></div>
+    <div class="inside zOne">
+      <div class="contact-form">
+        <div class="form-holder">
 
-            <div class="form-spacer"></div>
-            <div class="form-title">
-              <p>FORMULAIRE DE CONTACT</p>
+          <div class="form-spacer"></div>
+          <div class="form-title">
+            <p>FORMULAIRE DE CONTACT</p>
+          </div>
+
+          <div class="form-spacer"></div>
+          <div class="form-identity-holder">
+            <div class="form-identity-firstname">
+              <label for="firstname">Prénom</label>
+              <input type="identity" name="Prénom" id="firstname" placeholder="Jean">
+            </div>
+            <div class="form-identity-lastname">
+              <label for="lastname">Nom</label>
+              <input type="identity" name="Nom" id="lastname" placeholder="Dujardin">
+            </div>
+          </div>
+
+          <div class="form-spacer"></div>
+          <div class="form-content">
+            <div class="form-mail-holder">
+              <label for="mail">Mail</label>
+              <input type="email" name="Mail" id="mail" placeholder="exemple@domain.org">
             </div>
 
             <div class="form-spacer"></div>
-            <div class="form-content">
-              <div class="form-mail-holder">
-                <label for="mail">Message</label>
-                <input type="email" name="Mail" id="mail" placeholder="exemple@domain.org">
-              </div>
-
-              <div class="form-spacer"></div>
-              <div class="form-identity-holder">
-                <div class="form-identity-firstname">
-                  <label for="firstname">Prénom</label>
-                  <input type="identity" name="Prénom" id="firstname" placeholder="Jean">
-                </div>
-                <div class="form-identity-lastname">
-                  <label for="lastname">Nom</label>
-                  <input type="identity" name="Nom" id="lastname" placeholder="Dujardin">
-                </div>
-              </div>
-
-              <div class="form-spacer"></div>
-              <div class="form-message-holder">
-                <label for="message">Message</label>
-                <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message ..."></textarea>
-              </div>
-
-              <div class="form-spacer"></div>
-              <div class="form-btn-holder">
-                <button type="submit">Envoyer</button>
-              </div>
-
-              <div class="form-spacer"></div>
+            <div class="form-message-holder">
+              <label for="message">Message</label>
+              <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message ..."></textarea>
             </div>
+
+            <div class="form-spacer"></div>
+            <div class="form-btn-holder">
+              <button type="submit">Envoyer</button>
+            </div>
+
+            <div class="form-spacer"></div>
           </div>
         </div>
       </div>
-
-      <div class="space"></div>
     </div>
+
+    <div class="space"></div>
   </div>
 
   <footer>
