Ajout: Header qui passe maintenant en mode sticky, génération de celui-ci via le javascript. Correction : Barre de classement d'une carte de jeu sur la page d'accueil repositionnée au bon endroit.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <!--
   <header>
     <div class="inside">
       <div class="flex">
@@ -33,6 +34,7 @@
       </div>
     </div>
   </header>
+-->
   <div class="page">
     <div class="gotm-bg"></div>
 
@@ -99,7 +101,7 @@
           <div class="card-left">
             <img class="cardv2img" src="img/hogwards-legacy.jpg" alt="" />
             <span class="cardrating20">
-              <span class="cardrating20in">
+              <span class=" cardrating20in">
                 <p class="rating">13</p>
                 <p class="rating">20</p>
               </span>
@@ -119,7 +121,7 @@
                   <span class="cardRatingIconBg"></span>
                   <span class="cardRatingBarHolder">
                     <span class="cardV2RatingBar">
-                      <p class="cardV2RatingPourcentage">55%</p>
+                      <p class="cardV2RatingPourcentage">32%</p>
                     </span>
                   </span>
                 </span>
@@ -236,5 +238,6 @@
 </body>
 
 <script src="js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
 </html>
