--- a/pages/game-list.html
+++ b/pages/game-list.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!--
     <header>
         <div class="inside">
             <div class="flex">
@@ -41,6 +42,7 @@
             </div>
         </div>
     </header>
+-->
     <div class="inside">
         <div class="separation">
             <div class="search">
@@ -88,42 +90,42 @@
             <div class="list-game">
                 <div class="project-item">
                     <a href="../pages/game-page.html">
-                        <img class="game-img-list" src="../img/hogwards-legacy.jpg" alt="" srcset=""/>
-                            <div class="overlay">
-                                <p>HOGWARTS LEGACY</p>
-                            </div>
+                        <img class="game-img-list" src="../img/hogwards-legacy.jpg" alt="" srcset="" />
+                        <div class="overlay">
+                            <p>HOGWARTS LEGACY</p>
+                        </div>
                     </a>
                 </div>
                 <div class="project-item">
                     <a href="../pages/game-page.html">
                         <img class="game-img-list" src="../img/fortnite.jpg" alt="" srcset="" />
-                            <div class="overlay">
-                                <p>FORTNITE</p>
-                            </div>
+                        <div class="overlay">
+                            <p>FORTNITE</p>
+                        </div>
                     </a>
                 </div>
                 <div class="project-item">
                     <a href="../pages/game-page.html">
                         <img class="game-img-list" src="../img/tlou.jpg" alt="" srcset="" />
-                            <div class="overlay">
-                                <p>THE LAST OF US</p>
-                            </div>
-                    </a>    
+                        <div class="overlay">
+                            <p>THE LAST OF US</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="project-item">
                     <a href="../pages/game-page.html">
                         <img class="game-img-list" src="../img/gow.jpg" alt="" srcset="" />
-                            <div class="overlay">
-                                <p>GOD OF WAR</p>
-                            </div>
-                    </a>    
+                        <div class="overlay">
+                            <p>GOD OF WAR</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="project-item">
                     <a href="../pages/game-page.html">
                         <img class="game-img-list" src="../img/minecraft.jpg" alt="" srcset="" />
-                            <div class="overlay">
-                                <p>MINECRAFT</p>
-                            </div>
+                        <div class="overlay">
+                            <p>MINECRAFT</p>
+                        </div>
                     </a>
                 </div>
             </div>
@@ -131,33 +133,26 @@
     </div>
     <footer>
         <div class="inside">
-          <div class="footer-collumns-container">
-            <div class="footer-collumn">
-              <p>Mentions légales</p>
+            <div class="footer-collumns-container">
+                <div class="footer-collumn">
+                    <p>Mentions légales</p>
+                </div>
+                <div class="footer-collumn">
+                    <p>Nous contacter</p>
+                </div>
+                <div class="footer-collumn">
+                    <div class="socials">
+                        <img src="../img/logo-reseaux/Instagram_simple_icon.svg" alt="" srcset="" class="social-icon" />
+                        <img src="../img/logo-reseaux/Facebook_F_icon.svg" alt="" srcset="" class="social-icon" />
+                    </div>
+                </div>
             </div>
-            <div class="footer-collumn">
-              <p>Nous contacter</p>
+            <div class="footer-bottom">
+                <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
             </div>
-            <div class="footer-collumn">
-              <div class="socials">
-                <img
-                  src="../img/logo-reseaux/Instagram_simple_icon.svg"
-                  alt=""
-                  srcset=""
-                  class="social-icon"
-                />
-                <img
-                  src="../img/logo-reseaux/Facebook_F_icon.svg"
-                  alt=""
-                  srcset=""
-                  class="social-icon"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="footer-bottom">
-            <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
-          </div>
         </div>
-      </footer>
+    </footer>
+
+    <script src="../js/script.js"></script>
+
 </html>
