Ajout : 1. Code javascript afin de générér les jeux sur la page d'accueil, page de jeu de test nommé 'game-pages'. 2. Ajout de 3 images de miniatures pour la génération des cartes de jeux sur la page d'accueil. 3. Ajout du fav-icon et du nom de la page d'accueil. Modification : 1. Changement de la page index.html afin qu'elle n'affiche plus les cartes de jeux par défaut. 2. Ré-organisation des fichiers javascripts.

--- a/pages/game-page.html
+++ b/pages/game-page.html
@@ -1,155 +1,119 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet Personnel</title>
 
-    <link rel="stylesheet" href="../style.css" />
-    <script src="../js/jQuery.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projet Personnel</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <link rel="stylesheet" href="../style.css" />
+  <script src="../js/jQuery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-  <body>
-    <header>
-      <div class="inside">
-        <div class="flex">
-          <div class="logo">
-            <img class="logo-img" src="img/logo-gc.png" alt="" srcset="" />
-          </div>
-          <ul class="headerlist">
-            <li class="headerlist-content">
-              <a href="../index.html"> Accueil </a>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <header>
+    <div class="inside">
+      <div class="flex">
+        <div class="logo">
+          <img class="logo-img" src="img/logo-gc.png" alt="" srcset="" />
+        </div>
+        <ul class="headerlist">
+          <li class="headerlist-content">
+            <a href="../index.html"> Accueil </a>
+          </li>
+          <li class="headerlist-content">Nos derniers tests</li>
+          <li class="headerlist-content">
+            <a href="game-list.html"> Jeux </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <div class="page">
+    <div class="background-img">
+      <img src="../img/hogwards-legacy.jpg" alt="" />
+    </div>
+    <div class="game-infos">
+      <div class="info-container">
+        <div class="inside">
+          <h2 class="game-title">HOGWARDS LEGACY</h2>
+          <ul class="quick-infos">
+            <li class="quick-infos-item">
+              <a class="developper" href="">Avalanche Software</a>
             </li>
-            <li class="headerlist-content">Nos derniers tests</li>
-            <li class="headerlist-content">
-              <a href="game-list.html"> Jeux </a>
+            <li class="quick-infos-item">
+              <a class="date" href="">Disponible le : 10 Février 2022</a>
+            </li>
+            <li class="quick-infos-item">
+              <a class="pc" href="">PC</a>
+            </li>
+
+            <li class="quick-infos-item">
+              <a class="playstation" href="">PS4/PS5</a>
+            </li>
+
+            <li class="quick-infos-item">
+              <a class="xbox" href="">XBOX</a>
             </li>
           </ul>
-        </div>
-      </div>
-    </header>
-    <div class="page">
-      <div class="background-img">
-        <img src="../img/hogwards-legacy.jpg" alt="" />
-        <div class="game-infos">
-          <div class="info-container">
-            <div class="inside">
-              <h2 class="game-title">HOGWARDS LEGACY</h2>
-              <ul class="quick-infos">
-                <li class="quick-infos-item">
-                  <a class="developper" href="">Avalanche Software</a>
-                </li>
-                <li class="quick-infos-item">
-                  <a class="date" href="">Disponible le : 10 Février 2022</a>
-                </li>
-                <li class="quick-infos-item">
-                  <a class="pc" href="">PC</a>
-                </li>
-
-                <li class="quick-infos-item">
-                  <a class="playstation" href="">PS4/PS5</a>
-                </li>
-
-                <li class="quick-infos-item">
-                  <a class="xbox" href="">XBOX</a>
-                </li>
-              </ul>
-              <div class="space"></div>
-              <p class="desc">
-                L'intrigue se déroule dans l'univers étendu de fantasy imaginé
-                par J. K. Rowling pour les romans Harry Potter et les films Les
-                Animaux fantastiques. Elle suit l'évolution d'un sorcier ou
-                d'une sorcière, c'est-à-dire la personne qui joue au jeu, au
-                sein de l'école de sorcellerie de Poudlard, à la fin des années
-                18001, soit antérieurement aux événements des deux séries de
-                Rowling. La première phase du jeu est une phase d'intégration et
-                de découverte de Poudlard, de ses cours de magie et des environs
-                du domaine. Le personnage incarné, doté d'une magie ancienne et
-                singulière, est intégré directement en cinquième année d'études,
-                et apprend à développer ses capacités magiques en lançant divers
-                sortilèges, en préparant des potions et en apprivoisant des
-                animaux fantastiques. Au cours de sa progression dans le jeu, le
-                personnage comprend que la magie particulière qu'il détient est
-                convoitée par les gobelins et les mages noirs pour détruire le
-                monde des sorciers. Les histoires s'adaptent au parcours choisi
-                par la personne qui joue et il est possible de sélectionner ses
-                compagnons pour évoluer dans le jeu.
-              </p>
-              <div class="img-container">
-                <ul class="game-gallery">
-                  <li class="game-img"><img src="" alt="" srcset="" /></li>
-                  <li class="game-img"><img src="" alt="" srcset="" /></li>
-                  <li class="game-img"><img src="" alt="" srcset="" /></li>
-                  <li class="game-img"><img src="" alt="" srcset="" /></li>
-                  <li class="game-img"><img src="" alt="" srcset="" /></li>
-                </ul>
-              </div>
-            </div>
+          <div class="space"></div>
+          <p class="desc">
+            L'intrigue se déroule dans l'univers étendu de fantasy imaginé
+            par J. K. Rowling pour les romans Harry Potter et les films Les
+            Animaux fantastiques. Elle suit l'évolution d'un sorcier ou
+            d'une sorcière, c'est-à-dire la personne qui joue au jeu, au
+            sein de l'école de sorcellerie de Poudlard, à la fin des années
+            18001, soit antérieurement aux événements des deux séries de
+            Rowling. La première phase du jeu est une phase d'intégration et
+            de découverte de Poudlard, de ses cours de magie et des environs
+            du domaine. Le personnage incarné, doté d'une magie ancienne et
+            singulière, est intégré directement en cinquième année d'études,
+            et apprend à développer ses capacités magiques en lançant divers
+            sortilèges, en préparant des potions et en apprivoisant des
+            animaux fantastiques. Au cours de sa progression dans le jeu, le
+            personnage comprend que la magie particulière qu'il détient est
+            convoitée par les gobelins et les mages noirs pour détruire le
+            monde des sorciers. Les histoires s'adaptent au parcours choisi
+            par la personne qui joue et il est possible de sélectionner ses
+            compagnons pour évoluer dans le jeu.
+          </p>
+          <div class="img-container">
+            <ul class="game-gallery">
+              <li class="game-img"><img src="" alt="" srcset="" /></li>
+              <li class="game-img"><img src="" alt="" srcset="" /></li>
+              <li class="game-img"><img src="" alt="" srcset="" /></li>
+              <li class="game-img"><img src="" alt="" srcset="" /></li>
+              <li class="game-img"><img src="" alt="" srcset="" /></li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="background-black">
-        <div class="space"></div>
-        <div class="space"></div>
-        <div class="space"></div>
-        <div class="inside">
-          <div class="gameplay-container">
-            <h3>Gameplay</h3>
-            <div class="gameplay-note-container">
-              <div
-                class="gameplay-note"
-                role="progressbar"
-                aria-valuemin="0"
-                aria-valuemax="100"
-                style="width: 60%"
-              ></div>
+    </div>
+    <div class="background-black">
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="space"></div>
+      <div class="inside">
+        <div class="gameplay-container">
+          <h3>Gameplay</h3>
+          <div class="gameplay-note-container">
+            <div class="gameplay-note" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</body>
 
-    <footer>
-      <div class="inside">
-        <div class="footer-collumns-container">
-          <div class="footer-collumn">
-            <p>Mentions légales</p>
-          </div>
-          <div class="footer-collumn">
-            <p>Nous contacter</p>
-          </div>
-          <div class="footer-collumn">
-            <div class="socials">
-              <img
-                src="../img/logo-reseaux/Instagram_simple_icon.svg"
-                alt=""
-                srcset=""
-                class="social-icon"
-              />
-              <img
-                src="../img/logo-reseaux/Facebook_F_icon.svg"
-                alt=""
-                srcset=""
-                class="social-icon"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
-        </div>
-      </div>
-    </footer>
-  </body>
+<script src="../js/script.js"></script>
 
-  <script src="../js/script.js"></script>
 </html>
