--- a/index.html
+++ b/index.html
@@ -5,36 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projet Personnel</title>
+  <title>GameCTRL</title>
+
+  <link rel="icon" href="img/logo-favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/logo-favicon.png" type="image/x-icon" />
 
   <link rel="stylesheet" href="style.css" />
-  <script src="js/jQuery.js"></script>
+  <script src="js/lib/jQuery.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <!--
-  <header>
-    <div class="inside">
-      <div class="flex">
-        <div class="logo">
-          <img class="logo-img" src="img/logo-gc.png" alt="" srcset="" />
-        </div>
-        <ul class="headerlist">
-          <li class="headerlist-content">
-            <a href="index.html"> Accueil </a>
-          </li>
-          <li class="headerlist-content">
-            <a href="pages/..."> Nos derniers tests </a>
-          </li>
-          <li class="headerlist-content">
-            <a href="pages/game-list.html"> Jeux </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </header>
--->
   <div class="page">
     <div class="gotm-bg"></div>
 
@@ -67,177 +48,18 @@
     <div class="inside">
       <h2 class="card-section-title">LES JEUX DE LA SEMAINE</h2>
       <div class="space"></div>
-      <!-- <div class="card-container">
-        <div class="card">
-          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
-        </div>
 
-        <div class="card">
-          <img class="card-img" src="img/tlou.jpg" alt="" srcset="" />
-        </div>
+      <div class="card-containerv2" id="container">
 
-        <div class="card">
-          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
-        </div>
+        <!-- Contenu des jeux -->
 
-        <div class="card">
-          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
-        </div>
-
-        <div class="card">
-          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
-        </div>
-
-        <div class="card">
-          <img class="card-img" src="img/hogwards-legacy.jpg" alt="" srcset="" />
-        </div>
+        <div class="space"></div>
       </div>
-    </div>
-    <div class="space"></div> -->
-
-      <div class="card-containerv2">
-
-        <div id="hog" class="cardv2">
-          <div class="card-left">
-            <img class="cardv2img" src="img/hogwards-legacy.jpg" alt="" />
-            <span class="cardrating20">
-              <span class=" cardrating20in">
-                <p class="rating">13</p>
-                <p class="rating">20</p>
-              </span>
-            </span>
-          </div>
-          <div class="card-right">
-            <p class="cardv2name">Hogwarts Legacy</p>
-            <p class="cardv2phrase">Venez découvrir l'univers de Harry Potter directement a portée de bras, vivez
-              votre expérience 200 ans avant la fameuse saga des romans et des films. Retrouvez le lieu mythique de
-              nos héros favoris ainsi que ses alentours.</p>
-            <span class="cardV2RatingContainer">
-              <span class="cardV2RatingSection">
-                <span class="cardV2RatingIcon">
-                  <img src="img/icons/noun-gamepad-1608468.png" alt="">
-                </span>
-                <span class="cardV2RatingProgressBar">
-                  <span class="cardRatingIconBg"></span>
-                  <span class="cardRatingBarHolder">
-                    <span class="cardV2RatingBar">
-                      <p class="cardV2RatingPourcentage">32%</p>
-                    </span>
-                  </span>
-                </span>
-              </span>
-              <span class="cardV2RatingSection">
-                <span class="cardV2RatingIcon">
-                  <img src="img/icons/noun-wrench-1560053.png" alt=""></span>
-                <span class="cardV2RatingProgressBar">
-                  <span class="cardRatingIconBg"></span>
-                  <span class="cardRatingBarHolder">
-                    <span class="cardV2RatingBar">
-                      <p class="cardV2RatingPourcentage">70%</p>
-                    </span>
-                  </span>
-                </span>
-              </span>
-              <span class="cardV2RatingSection">
-                <span class="cardV2RatingIcon">
-                  <img src="img/icons/noun-story-3266367.png" alt=""></span>
-                <span class="cardV2RatingProgressBar">
-                  <span class="cardRatingIconBg"></span>
-                  <span class="cardRatingBarHolder">
-                    <span class="cardV2RatingBar">
-                      <p class="cardV2RatingPourcentage">10%</p>
-                    </span>
-                  </span>
-                </span>
-              </span>
-              <span class="cardBtnSection">
-                <span class="cardBtnHolder">
-                  <span class="cardBtn">
-                    <span class="cardBtnIcon"></span>
-                  </span>
-                </span>
-              </span>
-            </span>
-            <span>
-              <p>Test</p>
-              <p>Test</p>
-              <p>Test</p>
-              <p>Test</p>
-            </span>
-          </div>
-          <div class="cardv2rank"></div>
-        </div>
-
-        <div id="hog" class="cardv2">
-          <div class="card-left">
-            <img class="cardv2img" src="img/tlou.jpg" alt="" />
-          </div>
-          <div class="card-right">
-            <div id="desc" class="cardv2desc">
-              <p class="cardv2name">The Last of Us</p>
-              <p class="cardv2phrase">Suivez Eli et Joël dans une quête de rédemption</p>
-              <span class="cardV2RatingContainer">
-                <span class="cardV2RatingSection">
-                  <span class="cardV2RatingIcon">
-                    <img src="img/icons/noun-gamepad-1608468.png" alt="">
-                  </span>
-                  <span class="cardV2RatingProgressBar"></span>
-                </span>
-                <span class="cardV2RatingSection">
-                  <span class="cardV2RatingIcon"></span>
-                  <span class="cardV2RatingProgressBar"></span>
-                </span>
-                <span class="cardV2RatingSection">
-                  <span class="cardV2RatingIcon"></span>
-                  <span class="cardV2RatingProgressBar"></span>
-                </span>
-                <span class="cardV2RatingTabBtn" id="openCardV2"><a class="salutbtn" href=""></a></span>
-              </span>
-              <span>
-                <p>Test</p>
-                <p>Test</p>
-                <p>Test</p>
-                <p>Test</p>
-              </span>
-            </div>
-          </div>
-          <div class="cardv2rank"></div>
-        </div>
-      </div>
-      <div class="space"></div>
-    </div>
-    <footer>
-      <div class="inside">
-        <div class="footer-collumns-container">
-          <div class="footer-collumn">
-            <p>Mentions légales</p>
-          </div>
-          <div class="footer-collumn">
-            <a href="pages/contact-us.html">
-              <p>Nous contacter</p>
-            </a>
-          </div>
-          <div class="footer-collumn">
-            <div class="socials">
-              <a
-                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjX_POz6Lf9AhV3VqQEHTETCysQyCl6BAgYEAM&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU">
-                <img src="./img/logo-reseaux/Instagram_simple_icon.svg" alt="" srcset="" class="social-icon" />
-              </a>
-              <a
-                href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjX_POz6Lf9AhV3VqQEHTETCysQyCl6BAgYEAM&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DdQw4w9WgXcQ&usg=AOvVaw0aHtehaphMhOCAkCydRLZU">
-                <img src="./img/logo-reseaux/Facebook_F_icon.svg" alt="" srcset="" class="social-icon" />
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <p class="very-small-text">Copyrights @SparqueeZ & @Zyklion</p>
-        </div>
-      </div>
-    </footer>
 </body>
 
+<script src="js/lib/generateHeaderAndFooter.js"></script>
+<script src="js/lib/ajax.js"></script>
+<script src="js/showGames.js"></script>
 <script src="js/script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
 </html>
