--- a/pages/game-list.html
+++ b/pages/game-list.html
@@ -31,7 +31,9 @@
                             Accueil
                         </a>
                     </li>
-                    <li class="headerlist-content">Nos derniers tests</li>
+                    <li class="headerlist-content">
+                        <a href="pages/..."> Nos derniers tests </a>
+                    </li>
                     <li class="headerlist-content">
                         <a href="../pages/game-list.html">
                             Jeux
