--- a/pages/game-page.html
+++ b/pages/game-page.html
@@ -29,7 +29,9 @@
             <li class="headerlist-content">
               <a href="../index.html"> Accueil </a>
             </li>
-            <li class="headerlist-content">Nos derniers tests</li>
+            <li class="headerlist-content">
+              <a href="pages/..."> Nos derniers tests </a>
+            </li>
             <li class="headerlist-content">
               <a href="game-list.html"> Jeux </a>
             </li>
@@ -85,13 +87,13 @@
                 compagnons pour évoluer dans le jeu.
               </p>
               <div class="img-container">
-                <ul class="game-gallery">
+                <div class="game-slider">
                   <li class="game-img"><img src="" alt="" srcset="" /></li>
                   <li class="game-img"><img src="" alt="" srcset="" /></li>
                   <li class="game-img"><img src="" alt="" srcset="" /></li>
                   <li class="game-img"><img src="" alt="" srcset="" /></li>
                   <li class="game-img"><img src="" alt="" srcset="" /></li>
-                </ul>
+                </div>
               </div>
             </div>
           </div>
